frontend/css/styles.css
/* ... */
.tab-container h3 {
  color: var(--primary-colour);
}

.admin .navbar {
  box-shadow: none;
}

/* ===========================
   TABS
   =========================== */

.tab {
  position: fixed;
  top: var(--navbar-height);
  height: var(--tabs-height);
  display: flex;
  width: calc(100% - var(--sidebar-width));
  background: var(--background-colour);
  border-bottom: 2px solid var(--border-colour);
  z-index: 900;
  box-shadow: var(--shadow);
}

.tablinks {
  flex: 1;
  padding: 15px;
  background: var(--background-colour);
  border: none;
  cursor: pointer;
  font-size: 16px;
  color: var(--text-colour);
}

.tablinks:hover {
  background: var(--shadow-hover);
}

.tablinks.active {
  background: var(--background-colour);
  border-bottom: 3px solid var(--primary-colour);
  font-weight: bold;
  color: var(--primary-colour);
}

.tabcontent {
  display: none;
  padding: 20px 0;
}


/* ===========================
   DROPDOWN
   =========================== */


.status-selection {
  width: 70%;
  box-sizing: border-box;
  border: none;
  padding: 12px 16px;
  background-color: var(--primary-colour);
  color: white;
  font-size: 16px;
  cursor: pointer;
  appearance: none; 
  -webkit-appearance: none;
  -moz-appearance: none;
}

.status-selection:hover,
.status-selection:focus {
  background-color: var(--primary-colour)
}

/* ===========================
   SIDEBAR
   =========================== */

.sidebar {
  margin: 0;
  padding: 0;
  width: var(--sidebar-width);
  background-color: var(--background-colour);
  position: fixed;
  height: 100%;
  overflow: auto;
  border-right: 1px solid var(--border-colour);
}

.sidebar a {
  cursor: pointer;
  width:100%;
  display: block;
  padding: 16px;
  text-decoration: none;
}

.sidebar a.active {
  color: var(--white);
  background-color: var(--primary-colour);
}

.sidebar a:hover:not(.active) {
  color: var(--primary-colour);
  background-color: var(--frame-colour);
}

/* ===========================
   PROFILE DETAILS
   =========================== */

.profile-wrapper {
  display: block;
  flex-direction: column;
  align-items: center;
  gap: 40px;
}

.profile-wrapper .frame {
  max-width: 100%;
  width: 100%;
  padding-top: 4rem;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-bottom: 2rem;
  border-radius: 5px;
}

.profile-wrapper button {
  width: 20%;
  padding: 12px;
  background: var(--primary-colour);
  border-radius: 3px;
  border: none;
  cursor: pointer;
  font-size: 16px;
  color: #fff;
  font-weight: 500;
  margin: 0 auto 20px;
  display: block;
  transition: 0.5s;
  margin-top: 2rem;
  margin-bottom: 1rem;
  .profile-wrapper button {
    margin: 2rem auto 1rem auto;
  }
}

.profile-wrapper .row {
  display: flex;
  gap: 20px;
  flex-wrap: wrap;
}

.profile-wrapper .row > * {
  flex: 1 1 200px;
}

.password form > div {
  display: flex;
  align-items: center;
  gap: 10px;
  margin-bottom: 15px;
}

.password label {
  width: 30%;
  text-align: right;
}

.password.frame {
  width: 50%;
  min-width: 300px;
  margin: 0 auto;
}

.password button {
  width: 80%;
}

/* ===========================
   TRANSACTIONS (ADMIN)
   =========================== */

.transaction-wrapper {
  width: 100%;
  margin: 0;
  overflow-x: auto;
  display: none;
}

.transaction-table {
  width: 100%;
}

.transaction-header {
  padding: 10px 0;
  border-bottom: 1px solid var(--border-colour);
  font-weight: bold;
  letter-spacing: 1px;
  color: var(--dark-grey);
  font-size: 0.85rem;
}

.transaction-row {
  padding: 22px 0;
  border-bottom: 1px solid var(--border-colour);
  color: var(--text-colour);
  font-size: 0.95rem;
}

.transaction-header,
.transaction-row {
  display: grid;
  grid-template-columns: repeat(7, 1fr);
  width: 100%;
  align-items: center;
}

.transaction-status {
  display: inline-block;
  padding: 6px 12px;
  border-radius: 20px;
  font-size: 0.8rem;
  font-weight: 600;
  text-align: center;
  width: fit-content;
}

.transaction-row:hover {
  background: rgba(0, 0, 0, 0.02);
}

/* ===========================
   WINE SELECTION
   =========================== */

.grid {
  display: grid;

  grid-template-columns: repeat(3, minmax(0, 300px));
  gap: 20px;
  width: fit-content;
  margin: 0 auto;
}

.card {
  background: var(--frame-colour);
  border-radius: 10px;
  overflow: hidden;
  box-shadow: var(--shadow);
  transition: transform 0.2s;
  text-decoration: none;
  color: var(--black);
  display: flex;
  flex-direction: column;
}

.card:hover {
  transform: scale(1.03);
}

.card img {
  width: 100%;
  height: 220px;
  object-fit: contain;
}

.card .text {
  padding: 15px;
}

.card h3 {
  margin: 0;
  color: var(--primary-colour);
}

.card p {
  font-size: 14px;
  margin-top: 8px;
  color: var(--frame-text-colour);
}

/* ===========================
   ANIMATIONS
   =========================== */

@keyframes show-data {
  50% {
    transform: translateY(-10rem);
  }
  100% {
    transform: translateY(-8.5rem);
  }
}
@keyframes remove-overflow {
  to {
    overflow: initial;
  }
}
/* ... */

